# ibp

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  PLAN.md  README.md  SETUP_GUIDE.md  TODO.md  VERSION.TXT  WORK.md  build.ps1  build.sh  build_macos.sh  hatch_build.py  ifl_apply.py  ifl_create 2.py  ifl_create.py  install_macos.sh  llms.txt  macos_app.sh  macos_build.sh  macos_dist.sh  macos_dmg.sh  macos_package.sh  macos_prep.sh  plugins_cache.txt  plugins_convert.py  plugins_scan.py  plugins_tuner.py  plugins_utils.py  pyproject.toml  release.sh  test.ps1  test.sh  tree.txt
.github/workflows/: ci_cd.yml  ci_cd_template.yml
cmake/: GetVersion.cmake  version.h.in
cmake/modules/: FindFreeImage.cmake  FindGTest.cmake
doc/: README.md  index.md
doc/icon/: ibp.icns  ibp.iconsproj
docs/: _config.yml  building-mac.md  details.md  index.md  plugins.md
docs/plugins/: adaptivemanifoldfilter.ifl  adaptivemanifoldfilter.md  addnoise.ifl  addnoise.md  autolevels.ifl  autolevels.md  autothreshold.ifl  autothreshold.md  autotrim.ifl  autotrim.md  basicrotation.ifl  basicrotation.md  bilateralfilter.ifl  bilateralfilter.md  boxblur.ifl  boxblur.md  brightnesscontrast.ifl  brightnesscontrast.md  colorbalance.ifl  colorbalance.md  colorboosting.ifl  colorboosting.md  colorlayer.ifl  colorlayer.md  contrastpreservinggrayscale.md  curves.ifl  curves.md  dctdenoising.ifl  dctdenoising.md  desaturate.md  domaintransformfilter.ifl  domaintransformfilter.md  equalize.ifl  equalize.md  flip.ifl  flip.md  gaussianblur.ifl  gaussianblur.md  grayscale.ifl  grayscale.md  (+49 more)
src/: CMakeLists.txt  testutil.cpp  testutil.h
src/ibp/imagebatchprocessor/: imagefilterlist.cpp  imageprocessor.cpp  main.cpp  mainwindow.h  mainwindow.main.cpp  mainwindow.toolbar.edit.cpp  mainwindow.view.edit.cpp
src/ibp/imgproc/: CMakeLists.txt  freeimage.cpp
src/ibp/misc/: basesplineinterpolator1D.cpp
src/ibp/plugins/: CMakeLists.txt
src/ibp/widgets/: anchorpositionbox.cpp  curves.cpp  filedialog.h  inputlevelsslider.cpp  levelscurvespaintdelegate.cpp  outputlevelsslider.cpp  toolbuttonex.cpp
src/imagebatchprocessor/: __init__.py
src/plugins/: CMakeLists.txt
src/plugins/imagefilter_adaptivemanifoldfilter/: example.ifl  filter.yaml
src/plugins/imagefilter_addnoise/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_autolevels/: example.ifl  filter.yaml
src/plugins/imagefilter_autothreshold/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_autotrim/: example.ifl  filter.yaml
src/plugins/imagefilter_basicrotation/: example.ifl  filter.yaml
src/plugins/imagefilter_bilateralfilter/: example.ifl  filter.yaml
src/plugins/imagefilter_boxblur/: example.ifl  filter.yaml
src/plugins/imagefilter_brightnesscontrast/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_colorbalance/: example.ifl  filter.yaml
src/plugins/imagefilter_colorboosting/: filter.yaml
src/plugins/imagefilter_colorlayer/: example.ifl  filter.yaml
src/plugins/imagefilter_contrastpreservinggrayscale/: example.ifl  filter.yaml
src/plugins/imagefilter_curves/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_dctdenoising/: example.ifl  filter.yaml
src/plugins/imagefilter_desaturate/: example.ifl  filter.yaml
src/plugins/imagefilter_domaintransformfilter/: example.ifl  filter.yaml
src/plugins/imagefilter_equalize/: filter.yaml
src/plugins/imagefilter_flip/: example.ifl  filter.yaml
src/plugins/imagefilter_gaussianblur/: example.ifl  filter.yaml
src/plugins/imagefilter_grayscale/: filter.yaml
src/plugins/imagefilter_guidedfilter/: example.ifl  filter.yaml
src/plugins/imagefilter_hslcolorreplacement/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_hslkeyer/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_huesaturation/: example.ifl  filter.yaml
src/plugins/imagefilter_identity/: filter.yaml
src/plugins/imagefilter_inpaintingiihc/: example.ifl  filter.yaml
src/plugins/imagefilter_invert/: example.ifl  filter.yaml
src/plugins/imagefilter_itkn4iihc/: example.ifl  filter.yaml
src/plugins/imagefilter_levels/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_lowpassiihc/: example.ifl  filter.yaml
src/plugins/imagefilter_lumakeyer/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_median/: example.ifl  filter.yaml
src/plugins/imagefilter_morphologicaliihc/: example.ifl  filter.yaml
src/plugins/imagefilter_morphology/: example.ifl  filter.yaml
src/plugins/imagefilter_nlmdenoising/: example.ifl  filter.yaml
src/plugins/imagefilter_prospectiveiihc/: example.ifl  filter.yaml
src/plugins/imagefilter_resample/: example.ifl  filter.yaml
src/plugins/imagefilter_resize/: example.ifl  filter.yaml
src/plugins/imagefilter_surfacefittingiihc/: example.ifl  filter.yaml
src/plugins/imagefilter_texturelayer/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_threshold/: example.ifl  filter.cpp  filter.yaml
src/plugins/imagefilter_tvdenoising/: example.ifl  filter.yaml
src/plugins/imagefilter_tviihc/: example.ifl  filter.yaml
src/plugins/imagefilter_unsharpmask/: example.ifl  filter.yaml
tests/: CMakeLists.txt  integration_tests.cpp  test_packaging.py  test_utils.cpp  test_utils.h
tests/imgproc/: CMakeLists.txt  test_colorconversion.cpp  test_imagefilter.cpp  test_imagefilterlist.cpp  test_imagehistogram.cpp  test_util.cpp
tests/misc/: CMakeLists.txt  test_configuration.cpp  test_interpolation.cpp  test_probability.cpp
tests/widgets/: CMakeLists.txt  test_colorpicker.cpp  test_imageviewer.cpp  test_slider.cpp
